--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles/style.css"> 
     <title>Baby Animal Photo Generator</title>
 </head>
 <body>
-    
+    <div class="container">
+     <h1>Baby Animal Photo Generator</h1>
+        <div id="new-photo-container">
+        <form id="new-photo-form">
+        <img id="imageid" src="">
+        <input type="text" name="photo-image-url" id="new-photo-image-url" /> 
+        <input type="submit" value="Save Image"/>  
+        </form>
+    </div> 
+        <div id="photos-image-display">
+        <ul id="photos-container">
+
+
+            </ul>
+            <div id="photo-show">
+                
+            </div>
+            </div>
+        </div>
+    </form>
+    </div>
 </body>
+
+<script src="index.js"></script>
+
+
 </html>
