--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <title>Baby Animal Photo Generator</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" class="center">
      <h1>Baby Animal Photo Generator</h1>
         <div id="main">
         <img src="https://images.unsplash.com/photo-1449104532935-d9209c70e2b6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="baby elephant" 
         height="400" length="300" class="center"/> 
+        <a href="#" class="myButton">Play</a>
+        <a href="#" class="myButton">Pause</a>
+        <a href="#" class="myButton">Stop</a>
+    </div>
+    </div>
+    </div>
         
-     
     </div> 
     </div>
 </body>
