--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
      <h1>Baby Animal Photo Generator</h1>
         <div id="main">
         <img src="https://images.unsplash.com/photo-1449104532935-d9209c70e2b6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="baby elephant" 
-        height="400" length="300" class="center"/> 
+        height="400" length="300" class="center rounded-corners"/> 
+        <a href="#" class="previous round">&#8249;</a>
         <a href="#" class="myButton">Play</a>
         <a href="#" class="myButton">Pause</a>
         <a href="#" class="myButton">Stop</a>
+        <a href="#" class="next round">&#8250;</a>
     </div>
     </div>
     </div>
