--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <title>Baby Animal Photo Generator</title>
 </head>
 <body>
-    <div class="container" class="center">
-     <h1>Baby Animal Photo Generator</h1>
-        <div id="main">
-        <img src="https://images.unsplash.com/photo-1449104532935-d9209c70e2b6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="baby elephant" 
-        height="400" length="300" class="center rounded-corners"/> 
-        <a href="#" class="previous round">&#8249;</a>
-        <a href="#" class="myButton">Play</a>
+    <h1>Baby Animal Photo Slideshow</h1>
+    <div class="slideshowContainer" class="center">
+        <img class="imageSlides" src="https://images.unsplash.com/photo-1457542553555-6331c3c0855f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="baby seal" /> 
+        <img class="imageSlides" src="https://images.unsplash.com/photo-1559235038-1b0fadf76f78?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="kittens"/>  
+        <img class="imageSlides" src="https://images.unsplash.com/photo-1525253013412-55c1a69a5738?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="puppies"/>   
+          <span id ="leftArrow" class="slideshowArrow">&#8249;</span>
+          <span id ="rightArrow" class="slideshowArrow">&#8250;</span>
+        <div class="slideshowCircles">
+            <span class="circle dot"></span>
+            <span class="circle"></span>
+            <span class="circle"></span>
+        </div>
+        <!-- <a href="#" class="myButton">Play</a>
         <a href="#" class="myButton">Pause</a>
-        <a href="#" class="myButton">Stop</a>
-        <a href="#" class="next round">&#8250;</a>
-    </div>
-    </div>
-    </div>
-        
-    </div> 
+        <a href="#" class="myButton">Stop</a>  -->
     </div>
 </body>
 
