--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <h1>Baby Animal Photo Slideshow</h1>
-    <div class="slideshowContainer" class="center">
-        <img class="imageSlides" src="https://images.unsplash.com/photo-1457542553555-6331c3c0855f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="baby seal" /> 
+    <div id="thumbs_container" class="center">
+        <!-- <img class="imageSlides" src="https://images.unsplash.com/photo-1457542553555-6331c3c0855f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="baby seal" /> 
         <img class="imageSlides" src="https://images.unsplash.com/photo-1559235038-1b0fadf76f78?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="kittens"/>  
         <img class="imageSlides" src="https://images.unsplash.com/photo-1525253013412-55c1a69a5738?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="puppies"/>
-        <img class="imageSlides" src="https://images.unsplash.com/photo-1449104532935-d9209c70e2b6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="elephant calf and mom"/>  
+        <img class="imageSlides" src="https://images.unsplash.com/photo-1449104532935-d9209c70e2b6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="elephants"/>   -->
           <span id ="leftArrow" class="slideshowArrow">&#8249;</span>
           <span id ="rightArrow" class="slideshowArrow">&#8250;</span>
-        <div class="slideshowCircles">
+        <!-- <div class="slideshowCircles">
             <span class="circle dot"></span>
             <span class="circle"></span>
             <span class="circle"></span>
-            <span class="circle"></span>
+            <span class="circle"></span> -->
         </div>
         <!-- <a href="#" class="myButton">Play</a>
         <a href="#" class="myButton">Pause</a>
