--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Baby Animal Photo Slideshow</h1>
-    <div id="thumbs_container" class="center">
+    <div id="thumbs_container" class="center rounded-corners">
         <!-- <img class="imageSlides" src="https://images.unsplash.com/photo-1457542553555-6331c3c0855f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="baby seal" /> 
         <img class="imageSlides" src="https://images.unsplash.com/photo-1559235038-1b0fadf76f78?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="kittens"/>  
         <img class="imageSlides" src="https://images.unsplash.com/photo-1525253013412-55c1a69a5738?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="puppies"/>
@@ -22,9 +22,9 @@
             <span class="circle"></span>
             <span class="circle"></span> -->
         </div>
-        <!-- <a href="#" class="myButton">Play</a>
+        <a href="#" class="myButton">Play</a>
         <a href="#" class="myButton">Pause</a>
-        <a href="#" class="myButton">Stop</a>  -->
+        <a href="#" class="myButton">Stop</a> 
     </div>
 </body>
 
