--- a/index.html
+++ b/index.html
@@ -9,33 +9,17 @@
 </head>
 <body>
     <h1>Baby Animal Photo Slideshow</h1>
-    <div id="wrap">
-    <div id="target"></div>
- 
- 
     <div id="thumbs_container" class="center rounded-corners">
-        <!-- <img class="imageSlides" src="https://images.unsplash.com/photo-1457542553555-6331c3c0855f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="baby seal" /> 
-        <img class="imageSlides" src="https://images.unsplash.com/photo-1559235038-1b0fadf76f78?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="kittens"/>  
-        <img class="imageSlides" src="https://images.unsplash.com/photo-1525253013412-55c1a69a5738?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="puppies"/>
-        <img class="imageSlides" src="https://images.unsplash.com/photo-1449104532935-d9209c70e2b6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="elephants"/>   -->
-          <!-- <span id ="leftArrow" class="slideshowArrow">&#8249;</span>
-          <span id ="rightArrow" class="slideshowArrow">&#8250;</span> -->
-        <!-- <div class="slideshowCircles">
-            <span class="circle dot"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span> -->
-        </div>
-        <a href="#" class="myButton">Play</a>
-        <a href="#" class="myButton">Pause</a>
-        <a href="#" class="myButton">Stop</a> 
+        <img src="https://images.unsplash.com/photo-1449104532935-d9209c70e2b6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9" alt="baby elephant"
+        height="400px" width="500px" class="thumb"/>
     </div>
-
-    
-    </div>
-
-
+        <a href="#" class="myButton" id="previous">&#8249;</a>
+        <a href="#" class="myButton" id="play">&#x25ba;</a>
+        <a href="#" class="myButton" id="pause">&#x2016;</a>
+        <a href="#" class="myButton" id="stop">&#9724;</a> 
+        <a href="#" class="myButton" id="next">&#8250;</a>
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="Adapter.js"></script>
 </body>
 
 
