created categories button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <h1>Baby Animal Photo Slideshow</h1>
+    <div class="dropdown">
+        <button class="dropbtn">Categories</button>
+        <div class="dropdown-content">
+            <a href="#">Elephants</a>
+            <a href="#">Kittens</a>
+            <a href="#">Puppies</a>
+            <a href="#">Bunnies</a> 
+        </div>
+    </div>
     <div id="thumbs_container" class="center rounded-corners"></div>
     <div id="artist_container"></div>
         <a href="#" class="myButton" id="previous">&#8249;</a>
