added functionality to previous button

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <a href="#" class="myButton" id="next">&#8250;</a>
         <br> 
         <form action="#" id="user">
-            Name: <input type="text" name="username">
-            <input type="submit">
+            <a class="name">Name:</a><input type="text" name="username" class="comment_box"> 
+            <input type="submit" class="submit">
         </form>
         <br>
-        <textarea rows="4" cols="50" name="comment" form="user_form">
+        <textarea rows="4" cols="50" name="comment" form="user_form" class="comment_box">
             Enter comment here...
         </textarea>
     <script type="text/javascript" src="JS/index.js"></script>
