--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
               <div class="text">photo credit: Hannah Grace</div>
             </div> -->
             
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
             
             </div>
             <br>
