comments are showing!

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </div>
             <br>
     
-     <script type="text/javascript" src="JS/components/test.js"></script>  
+     <script type="text/javascript" src="JS/components/main.js"></script>  
     <!-- <script type="text/javascript" src="JS/comments.js"></script> -->
     <!-- <script type="text/javascript" src="JS/components/photo.js"></script>
     <script type="text/javascript" src="JS/components/photos.js"></script>
     <script type="text/javascript" src="JS/components/app.js"></script>
     <script type="text/javascript" src="JS/index.js"></script>
-    <script type="text/javascript" src="JS/adapters/PhotosAdapter.js"></script> --> -->
+    <script type="text/javascript" src="JS/adapters/PhotosAdapter.js"></script> --> 
 </body>
 
 
