--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <br>
     
      <script type="text/javascript" src="JS/components/main.js"></script>  
-    <!-- <script type="text/javascript" src="JS/comments.js"></script> -->
+     <script type="text/javascript" src="JS/components/comments.js"></script> 
     <!-- <script type="text/javascript" src="JS/components/photo.js"></script>
     <script type="text/javascript" src="JS/components/photos.js"></script>
     <script type="text/javascript" src="JS/components/app.js"></script>
