comment form to function

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
         <button class="controls" id="next">&gt;</button>
       <br></br> 
         <div id="main"></div>
+      
         <p>Leave a comment</p> 
     <div id="new-comment-container">
     <form id="new-comment-form">
       <input type="text" name="comment-body" id="new-comment-body" placeholder="Comment">
       <input type="submit" value="Save Comment">
     </form>
+    <ul id="comments-container">
+
+    </ul>
     </div>
     <br></br> 
   </div>
