--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <input type="text" name="comment-body" id="new-comment-body" placeholder="Comment">
       <input type="submit" value="Save Comment">
     </form>
+    <div id="comments-container">
+      
+    </div>   
     </div>
     <br></br> 
   </div>
