--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <input type="text" name="comment-body" id="new-comment-body" placeholder="Comment">
       <input type="submit" value="Save Comment">
     </form>
+    <br></br> 
+    <button id="sort-button">Sort Comments</button>
     <div id="comments-container">
       
     </div>   
